# game_book

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.MD  makefile  save.xml  temporary_build.sh
book/: begin.xml  combat_example.xml  story_example.xml  story_example1.xml  story_example2.xml  trade_example.xml
examples/: begin.xml  combat_example.xml  fight_guridum.xml  last.xml  new_york.xml  story_example1.xml  story_example2.xml  tavern.xml  trade_example.xml
src/: main.cpp
src/game_book/: creature.cpp  creature.h  game.cpp  game.h  graphics_common.cpp  graphics_common.h  inventory.cpp  inventory.h  item.cpp  item.h  page.cpp  page.h
src/game_book/items/: fixer.cpp  fixer.h  food.cpp  food.h  weapon.cpp  weapon.h
src/game_book/page_types/: combat.cpp  combat.cxx  combat.h  story.cpp  story.h  trade.cpp  trade.h
src/game_handler/: IGameState.cpp  IGameState.h  colors.cpp  colors.h  game.cpp  game.h  game_exception.h  game_state_manager.cpp  game_state_manager.h  graphics_common.cpp  inventory_state.cpp  inventory_state.h  main_menu.cpp  main_menu.h  menu_state.cpp  menu_state.h  page_state.cpp  page_state.h  pause_state.cpp  pause_state.h
src/graphics/: button.cpp  button.h  graphics_exception.h  group.h  inputbox.h  keylistener.h  menu.cpp  menu.h  screen.cpp  screen.h  textbox.cpp  textbox.h  window.cpp  window.h  window_manager.cpp  window_manager.h
src/utils/: graphics_features.cpp  graphics_features.h  helpers.cpp  helpers.h  rng.cpp  rng.h  xml_parser.cpp  xml_parser.h
src/utils/graphics/: IChangeable.h  IMenu.h  button.cpp  button.h  graphics_exception.h  group.h  inputbox.h  menu.cpp  menu.h  menu_base.h  mirror.h  screen.cpp  screen.h  status_bar.cpp  status_bar.h  textbox.cpp  textbox.h  window.cpp  window.h  window_manager.cpp  window_manager.h
src/utils/interfaces/: IChangeable.h  ISerializable.h
src/utils/xml_parser/: ISerializable.h  document.cpp  document.h  tag.cpp  tag.h  xml_exception.cpp  xml_exception.h  xml_parser.cpp  xml_parser.h
